Release v0.3: Added AccountController and dev profile